# python-package-template

./: README.md  setup.cfg
src/cli/: cli.py
