[metadata]
name = cli
version = attr: cli.cli.__version__
author = alecor.dev
author_email = alecor.dev@gmail.com
url = 
description = alecor CLI utilities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = alecordev, cli
license = 
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    PyYAML >= 6.0
    typer

[options.entry_points]
console_scripts = 
    alecor = cli.cli:app

[options.packages.find]
where=
    src
exclude =
    examples*
    tools*
    docs*
    my_package.tests*

[options.package_data]
cli =
    data/schema.json, *.txt
* =
    README.md
